Lời nhắn mô tả cập nhật

--- a/portfolio.html
+++ b/portfolio.html
@@ -72,6 +72,24 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="blog-item">
+                                                <a href="portfolio-details-19.html" class="blog-link">
+                                                    <div class="blog-img">
+                                                        <img class="img-fluid" src="img/blogs/portfolio_19.png" alt="">
+                                                    </div>
+                                                    <div class="blog-info">
+                                                        <div class="tag">
+                                                            <span>Dec/2022 - App/Web</span>
+                                                        </div>
+                                                        <h4 class="blog-title">
+                                                            <span>UI Kit - Design System v1.0</span>
+                                                        </h4>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <!-- /blog-item -->
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="blog-item">
                                                 <a href="portfolio-details-18.html" class="blog-link">
                                                     <div class="blog-img">
                                                         <img class="img-fluid" src="img/blogs/portfolio_18.png" alt="">
@@ -334,24 +352,6 @@
                                                         </div>
                                                         <h4 class="blog-title">
                                                             <span>Learnify – Personalized Online Education</span>
-                                                        </h4>
-                                                    </div>
-                                                </a>
-                                            </div>
-                                            <!-- /blog-item -->
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="blog-item">
-                                                <a href="portfolio-details-09html" class="blog-link">
-                                                    <div class="blog-img">
-                                                        <img class="img-fluid" src="img/blogs/portfolio_09.jpg" alt="">
-                                                    </div>
-                                                    <div class="blog-info">
-                                                        <div class="tag">
-                                                            <span>Jan/2023 - App - Freelance</span>
-                                                        </div>
-                                                        <h4 class="blog-title">
-                                                            <span>Domus AI – AI Powered Smart Home</span>
                                                         </h4>
                                                     </div>
                                                 </a>
