--- a/portfolio-details-08.html
+++ b/portfolio-details-08.html
@@ -6,32 +6,28 @@
                     <div class="col-md-12">
                         <div class="blog-info">
                             <div class="tag mt-0">
-                                <span>26/Oct/2019 - Website Design</span>
+                                <span>Jun/2023 - App</span>
                             </div>
-                            <h4 class="blog-details-title">Why UX is important in web and app design?</h4>
+                            <h4 class="blog-details-title">Learnify * Personalized Online Education - Freelance</h4>
                         </div>
                     </div>
                     <div class="col-lg-12">
-                        <p>This response is important for our ability to learn from mistakes, but it alsogives self-criticism, because it is part of the threat-protection system.</p>
-                        <p class="mt-30">In other words. One touch of a red-hot stove is usually all we need to avoid that kind of discomfort in future. The same is true as we experience the emotional sensation of stress from our first instances of social rejection ridicule. We quickly learn to fear and thus automatically avoid potentially stressful situations of all kinds, including.</p>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <img class="img-fluid mt-40" src="img/blogs/blog_01.jpg" alt="">
-                            </div>
-                            <div class="col-md-6">
-                                <img class="img-fluid mt-40" src="img/blogs/blog_02.jpg" alt="">
-                            </div>
+                        <div>
+                            <a class="blog-link" href="https://www.figma.com/design/otKeQB634Wl38U9Sr70UVk/Learnify-Design?node-id=0-1" target="_blank" rel="noopener noreferrer" >🥳 View the design on Figma ✌️</a>
                         </div>
-                        <div class="blockquote">
-                            <p>“ Sedut perspiciatis unde omnis natus error voluptate accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto ”</p>
+                        <p class="mt-30">An interactive learning app designed to make studying fun, effective, and personalized. With engaging lessons, daily challenges, and real-time feedback, SmartLearn helps students stay motivated and reach their full potential.</p>
+                        <div class="col-md-12">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_08_a.png" alt="">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_08_b.png" alt="">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_08_c.png" alt="">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_08_d.png" alt="">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_08_e.png" alt="">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_08_f.png" alt="">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_08_g.png" alt="">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_08_h.png" alt="">
                         </div>
+                    </div>  
                         <!-- /blockquote -->
-
-                        <h3 class="blog-details-sec-title">What is UX.</h3>
-                        <p class="mt-30">One touch of a red-hot stove is usually all we need to avoid that kind of discomfort in future. The same is true as we experience the emotional sensation of stress from our first instances of social rejection ridicule. We quickly learn to fear and thus automatically avoid potentially stressful situations of all kinds, including.</p>
-                        <p class="mt-30">This response is important for our ability to learn from mistakes, but it alsogives self-criticism, because it is part of the threat-protection system. In other words.</p>
-                    </div>
-
                     <div class="col-md-12">
                         <div class="divider"></div>
                         <!-- /divider -->
@@ -40,10 +36,10 @@
                     <div class="col-md-12">
                         <div class="blog-details-nav d-flex justify-content-between">
                             <div>
-                                <a class="blog-link" href="blog-details.html">Why swiming is also another important thing for man. <small>PREVIOUS POST</small></a>
+                                <a class="blog-link" href="blog-details.html"> <small>PREVIOUS POST</small></a>
                             </div>
                             <div class="text-right">
-                                <a class="blog-link" href="blog-details.html">Difference between web design and web development. <small>NEXT POST</small></a>
+                                <a class="blog-link" href="blog-details.html"><small>NEXT POST</small></a>
                             </div>
                         </div>
                         <!-- /portfolio-details-nav -->
