--- a/portfolio-details-14.html
+++ b/portfolio-details-14.html
@@ -8,7 +8,7 @@
                             <div class="tag mt-0">
                                 <span>Jun/2023 - App</span>
                             </div>
-                            <h4 class="blog-details-title"> Smart Home App - Freelance</h4>
+                            <h4 class="blog-details-title"> Smart AI Chatbot - Freelance</h4>
                         </div>
                     </div>
                     <div class="col-lg-12">
