Lời nhắn mô tả cập nhật

--- a/portfolio.html
+++ b/portfolio.html
@@ -252,7 +252,7 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="blog-item">
-                                                <a href="portfolio-details-03.html" class="blog-link">
+                                                <a href="portfolio-details-06.html" class="blog-link">
                                                     <div class="blog-img">
                                                         <img class="img-fluid" src="img/blogs/portfolio_06.jpg" alt="">
                                                     </div>
@@ -288,16 +288,16 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="blog-item">
-                                                <a href="blog-details-05.html" class="blog-link">
+                                                <a href="portfolio-details-05.html" class="blog-link">
                                                     <div class="blog-img">
                                                         <img class="img-fluid" src="img/blogs/portfolio_02.jpg" alt="">
                                                     </div>
                                                     <div class="blog-info">
                                                         <div class="tag">
-                                                            <span>Feb/2023 - Web - Freelance</span>
+                                                            <span>Feb/2021 - Web - Freelance</span>
                                                         </div>
                                                         <h4 class="blog-title">
-                                                            <span>Crypto Dashboard Builder – Web & App Development.</span>
+                                                            <span>Crypto Dashboard Builder – Web & Mobile Web Development.</span>
                                                         </h4>
                                                     </div>
                                                 </a>
@@ -306,7 +306,7 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="blog-item">
-                                                <a href="portfolio-details-06.html" class="blog-link">
+                                                <a href="portfolio-details-03.html" class="blog-link">
                                                     <div class="blog-img">
                                                         <img class="img-fluid" src="img/blogs/portfolio_03.jpg" alt="">
                                                     </div>
@@ -366,7 +366,7 @@
                                                     </div>
                                                     <div class="blog-info">
                                                         <div class="tag">
-                                                            <span>Jan/2022 - Website & App - Product</span>
+                                                            <span>Sep/2015 - Product Design</span>
                                                         </div>
                                                         <h4 class="blog-title">
                                                             <span>Fado Group – Cross Border E-Commerce</span>
