--- a/portfolio-details-04.html
+++ b/portfolio-details-04.html
@@ -6,47 +6,25 @@
                     <div class="col-md-12">
                         <div class="blog-info">
                             <div class="tag mt-0">
-                                <span>26/Oct/2019 - Website Design</span>
+                                <span>Aug/2024 - Web/Mobile app - Freelance</span>
                             </div>
-                            <h4 class="blog-details-title">Why UX is important in web and app design?</h4>
+                            <h4 class="blog-details-title">FGF – Web & App Development for Green Future Tech</h4>
                         </div>
                     </div>
                     <div class="col-lg-12">
-                        <p>This response is important for our ability to learn from mistakes, but it alsogives self-criticism, because it is part of the threat-protection system.</p>
-                        <p class="mt-30">In other words. One touch of a red-hot stove is usually all we need to avoid that kind of discomfort in future. The same is true as we experience the emotional sensation of stress from our first instances of social rejection ridicule. We quickly learn to fear and thus automatically avoid potentially stressful situations of all kinds, including.</p>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <img class="img-fluid mt-40" src="img/blogs/blog_01.jpg" alt="">
-                            </div>
-                            <div class="col-md-6">
-                                <img class="img-fluid mt-40" src="img/blogs/blog_02.jpg" alt="">
-                            </div>
+                        <div>
+                            <a class="blog-link" href="https://greenfuture.tech" target="_blank" rel="noopener noreferrer" >👉 Live website (final product may differ) ✌️</a>
                         </div>
+                        <p class="mt-30">Client: GreenFuture Tech (under NDA)</p>
+                        <p class="mt-30">Worked on the end-to-end UI/UX design for a smart electric vehicle (EV) charging system. Key responsibilities included:</p>
+                        <p class="mt-30">- Designing intuitive user flows for mobile and web platforms.</p>
+                        <p class="mt-30">- Creating real-time charging status screens with clear visual feedback.</p>
+                        <p class="mt-30">- Balancing usability and technical constraints to support both first-time and returning users.</p>
+                        <p class="mt-30">- Collaborating closely with the product team, developers, and stakeholders under strict confidentiality.</p>
                         <div class="blockquote">
-                            <p>“ Sedut perspiciatis unde omnis natus error voluptate accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto ”</p>
+                            <p>“ Due to NDA, design visuals and assets cannot be publicly shared. Prototype available privately upon request. ”</p>
                         </div>
                         <!-- /blockquote -->
-
-                        <h3 class="blog-details-sec-title">What is UX.</h3>
-                        <p class="mt-30">One touch of a red-hot stove is usually all we need to avoid that kind of discomfort in future. The same is true as we experience the emotional sensation of stress from our first instances of social rejection ridicule. We quickly learn to fear and thus automatically avoid potentially stressful situations of all kinds, including.</p>
-                        <p class="mt-30">This response is important for our ability to learn from mistakes, but it alsogives self-criticism, because it is part of the threat-protection system. In other words.</p>
-                    </div>
-
-                    <div class="col-md-12">
-                        <div class="divider"></div>
-                        <!-- /divider -->
-                    </div>
-                    
-                    <div class="col-md-12">
-                        <div class="blog-details-nav d-flex justify-content-between">
-                            <div>
-                                <a class="blog-link" href="blog-details.html">Why swiming is also another important thing for man. <small>PREVIOUS POST</small></a>
-                            </div>
-                            <div class="text-right">
-                                <a class="blog-link" href="blog-details.html">Difference between web design and web development. <small>NEXT POST</small></a>
-                            </div>
-                        </div>
-                        <!-- /portfolio-details-nav -->
                     </div>
                 </div>
             </div>
