--- a/portfolio-details-05.html
+++ b/portfolio-details-05.html
@@ -6,32 +6,35 @@
                     <div class="col-md-12">
                         <div class="blog-info">
                             <div class="tag mt-0">
-                                <span>26/Oct/2019 - Website Design</span>
+                                <span>Feb/2021 - Web - Freelance</span>
                             </div>
-                            <h4 class="blog-details-title">Why UX is important in web and app design?</h4>
+                            <h4 class="blog-details-title">Crypto Dashboard Builder – Web & Mobile Web Development.</h4>
                         </div>
                     </div>
                     <div class="col-lg-12">
-                        <p>This response is important for our ability to learn from mistakes, but it alsogives self-criticism, because it is part of the threat-protection system.</p>
-                        <p class="mt-30">In other words. One touch of a red-hot stove is usually all we need to avoid that kind of discomfort in future. The same is true as we experience the emotional sensation of stress from our first instances of social rejection ridicule. We quickly learn to fear and thus automatically avoid potentially stressful situations of all kinds, including.</p>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <img class="img-fluid mt-40" src="img/blogs/blog_01.jpg" alt="">
-                            </div>
-                            <div class="col-md-6">
-                                <img class="img-fluid mt-40" src="img/blogs/blog_02.jpg" alt="">
-                            </div>
+                        <div>
+                            <a class="blog-link" href="https://www.figma.com/design/XwqdOcXVFKPe250YZMCWyi/Crypto-Dashboard-Builder?node-id=0-2845&t=A3pDnlGJ1QT9kcV9-0" target="_blank" rel="noopener noreferrer" >🥳 View the design on Figma ✌️</a>
                         </div>
-                        <div class="blockquote">
-                            <p>“ Sedut perspiciatis unde omnis natus error voluptate accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto ”</p>
-                        </div>
+                        <p class="mt-30">🧩 Project Description:</p>
+                        <p class="mt-30">Crypto Dashboard Builder allows users to create customizable dashboards to track real-time cryptocurrency market data. The project focuses on providing an intuitive, visually appealing interface and seamless user experience for data analysis.</p>
+                        <p class="mt-30">🎯 UI/UX Design:</p>
+                        <p class="mt-30">🔹 UI Design: Clean, modern layout with Glassmorphism elements for a sleek, transparent look. Focus on clear data visualization and intuitive navigation.</p>
+                        <p class="mt-30">🔹 UX Design: Optimized user flows with drag-and-drop functionality, allowing users to easily customize dashboards. Mobile-first design for smooth usability across devices.</p>
+                        <p class="mt-30">🔹 Customizability: Users can personalize their dashboard and share it with others.</p>
+                        <p class="mt-30">🔧 Key Design Features:</p>
+                        <p class="mt-30">🔹 UI Design: Clean, modern layout with Glassmorphism elements for a sleek, transparent look. Focus on clear data visualization and intuitive navigation.</p>
+                        <p class="mt-30">🔹 UX Design: Optimized user flows with drag-and-drop functionality, allowing users to easily customize dashboards. Mobile-first design for smooth usability across devices.</p>
+                        <p class="mt-30">🔹 Customizability: Users can personalize their dashboard and share it with others.</p>
+                            <div class="col-md-12">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_05_a.png" alt="">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_05_b.png" alt="">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_05_c.png" alt="">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_05_d.png" alt="">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_05_e.png" alt="">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_05_f.png" alt="">
+                            </div>
+                        </div>  
                         <!-- /blockquote -->
-
-                        <h3 class="blog-details-sec-title">What is UX.</h3>
-                        <p class="mt-30">One touch of a red-hot stove is usually all we need to avoid that kind of discomfort in future. The same is true as we experience the emotional sensation of stress from our first instances of social rejection ridicule. We quickly learn to fear and thus automatically avoid potentially stressful situations of all kinds, including.</p>
-                        <p class="mt-30">This response is important for our ability to learn from mistakes, but it alsogives self-criticism, because it is part of the threat-protection system. In other words.</p>
-                    </div>
-
                     <div class="col-md-12">
                         <div class="divider"></div>
                         <!-- /divider -->
@@ -40,10 +43,10 @@
                     <div class="col-md-12">
                         <div class="blog-details-nav d-flex justify-content-between">
                             <div>
-                                <a class="blog-link" href="blog-details.html">Why swiming is also another important thing for man. <small>PREVIOUS POST</small></a>
+                                <a class="blog-link" href="blog-details-18.html"> <small>PREVIOUS POST</small></a>
                             </div>
                             <div class="text-right">
-                                <a class="blog-link" href="blog-details.html">Difference between web design and web development. <small>NEXT POST</small></a>
+                                <a class="blog-link" href="blog-details.html"><small>NEXT POST</small></a>
                             </div>
                         </div>
                         <!-- /portfolio-details-nav -->
