--- a/portfolio-details-06.html
+++ b/portfolio-details-06.html
@@ -6,32 +6,24 @@
                     <div class="col-md-12">
                         <div class="blog-info">
                             <div class="tag mt-0">
-                                <span>26/Oct/2019 - Website Design</span>
+                                <span>Nov/2024 - App - Freelance</span>
                             </div>
-                            <h4 class="blog-details-title">Why UX is important in web and app design?</h4>
+                            <h4 class="blog-details-title">ny Share – Smart EV Charging App.</h4>
                         </div>
                     </div>
                     <div class="col-lg-12">
-                        <p>This response is important for our ability to learn from mistakes, but it alsogives self-criticism, because it is part of the threat-protection system.</p>
-                        <p class="mt-30">In other words. One touch of a red-hot stove is usually all we need to avoid that kind of discomfort in future. The same is true as we experience the emotional sensation of stress from our first instances of social rejection ridicule. We quickly learn to fear and thus automatically avoid potentially stressful situations of all kinds, including.</p>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <img class="img-fluid mt-40" src="img/blogs/blog_01.jpg" alt="">
-                            </div>
-                            <div class="col-md-6">
-                                <img class="img-fluid mt-40" src="img/blogs/blog_02.jpg" alt="">
-                            </div>
+                        <div>
+                            <a class="blog-link" href="https://www.figma.com/design/fMBYEwJmMRpl0cpaJdA4nb/Any-Share-Design?node-id=65-2" target="_blank" rel="noopener noreferrer" >🥳 View the design on Figma ✌️</a>
                         </div>
-                        <div class="blockquote">
-                            <p>“ Sedut perspiciatis unde omnis natus error voluptate accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto ”</p>
-                        </div>
+                        <p class="mt-30">AnyShare is a pioneering technology platform specializing in green charging solutions for electric vehicles and smart locker systems, aiming to build a more convenient and eco-friendly lifestyle.
+                            We deliver modern, safe, and user-friendly solutions that make clean energy access and smart storage easy and accessible anywhere.</p>
+                        <p class="mt-30">By integrating IoT technology, centralized management, and a seamless user experience, AnyShare is steadily positioning itself as a leader in the green transition movement across Vietnam and the region.</p>
+                            <div class="col-md-12">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_06_a.png" alt="">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_06_b.png" alt="">
+                            </div>
+                        </div>  
                         <!-- /blockquote -->
-
-                        <h3 class="blog-details-sec-title">What is UX.</h3>
-                        <p class="mt-30">One touch of a red-hot stove is usually all we need to avoid that kind of discomfort in future. The same is true as we experience the emotional sensation of stress from our first instances of social rejection ridicule. We quickly learn to fear and thus automatically avoid potentially stressful situations of all kinds, including.</p>
-                        <p class="mt-30">This response is important for our ability to learn from mistakes, but it alsogives self-criticism, because it is part of the threat-protection system. In other words.</p>
-                    </div>
-
                     <div class="col-md-12">
                         <div class="divider"></div>
                         <!-- /divider -->
@@ -40,10 +32,10 @@
                     <div class="col-md-12">
                         <div class="blog-details-nav d-flex justify-content-between">
                             <div>
-                                <a class="blog-link" href="blog-details.html">Why swiming is also another important thing for man. <small>PREVIOUS POST</small></a>
+                                <a class="blog-link" href="blog-details-18.html"> <small>PREVIOUS POST</small></a>
                             </div>
                             <div class="text-right">
-                                <a class="blog-link" href="blog-details.html">Difference between web design and web development. <small>NEXT POST</small></a>
+                                <a class="blog-link" href="blog-details.html"><small>NEXT POST</small></a>
                             </div>
                         </div>
                         <!-- /portfolio-details-nav -->
