--- a/portfolio-details-10.html
+++ b/portfolio-details-10.html
@@ -6,32 +6,41 @@
                     <div class="col-md-12">
                         <div class="blog-info">
                             <div class="tag mt-0">
-                                <span>26/Oct/2019 - Website Design</span>
+                                <span>Sep/2015 - Product Design</span>
                             </div>
-                            <h4 class="blog-details-title">Why UX is important in web and app design?</h4>
+                            <h4 class="blog-details-title">Fado Group - Cross Border E-Commerce</h4>
                         </div>
                     </div>
                     <div class="col-lg-12">
-                        <p>This response is important for our ability to learn from mistakes, but it alsogives self-criticism, because it is part of the threat-protection system.</p>
-                        <p class="mt-30">In other words. One touch of a red-hot stove is usually all we need to avoid that kind of discomfort in future. The same is true as we experience the emotional sensation of stress from our first instances of social rejection ridicule. We quickly learn to fear and thus automatically avoid potentially stressful situations of all kinds, including.</p>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <img class="img-fluid mt-40" src="img/blogs/blog_01.jpg" alt="">
-                            </div>
-                            <div class="col-md-6">
-                                <img class="img-fluid mt-40" src="img/blogs/blog_02.jpg" alt="">
-                            </div>
+                        <div>
+                            <a class="blog-link" href="https://fado.vn" target="_blank" rel="noopener noreferrer" >👉 Live website (final product may differ) ✌️</a>
                         </div>
-                        <div class="blockquote">
-                            <p>“ Sedut perspiciatis unde omnis natus error voluptate accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto ”</p>
-                        </div>
+                        <p class="mt-30">🧩 Project Description:</p>
+                        <p class="mt-30">Fado.vn is a cross-border e-commerce platform that connects Vietnamese consumers with global marketplaces like Amazon, eBay, and Rakuten. My task was to redesign the website to improve user experience, increase conversion rates, and modernize the visual identity.</p>
+                        <p class="mt-30">🎯 Key Contributions:</p>
+                        <p class="mt-30">🔹 Design leadership & direction:</p>
+                        <p class="mt-30">- Lead the UI/UX design team in the full website redesign of Fado.vn, a cross-border e-commerce platform.</p>
+                        <p class="mt-30">- Implemented an agile design process aligned with product and dev teams.</p>
+                        <p class="mt-30">- Set a modern, user-centric design direction suitable for international commerce.</p>
+                        <p class="mt-30">🔹 Data-driven UX optimization:</p>
+                        <p class="mt-30">- Analyzed user behavior via Google Analytics and heatmaps to inform UX decisions.</p>
+                        <p class="mt-30">- Boosted product page conversion rate by +28% after redesign launch.</p>
+                        <p class="mt-30">🔹 Design system development:</p>
+                        <p class="mt-30">- Created a comprehensive design system: components, typography, color palette, layout grids, and icon set.</p>
+                        <p class="mt-30">- Reduced design time for new features by 30–40% while maintaining consistency across the UI.</p>
+                        <p class="mt-30">🔹 Team management & growth:</p>
+                        <p class="mt-30">- Mentored 3 junior designers to mid-level within 6 months.</p>
+                        <p class="mt-30">- Established regular design reviews and knowledge-sharing sessions to foster team growth and creativity.</p>
+                            <div class="col-md-12">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_05_a.png" alt="">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_05_b.png" alt="">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_05_c.png" alt="">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_05_d.png" alt="">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_05_e.png" alt="">
+                                <img class="img-fluid mt-40" src="img/blogs/portfolio_05_f.png" alt="">
+                            </div>
+                        </div>  
                         <!-- /blockquote -->
-
-                        <h3 class="blog-details-sec-title">What is UX.</h3>
-                        <p class="mt-30">One touch of a red-hot stove is usually all we need to avoid that kind of discomfort in future. The same is true as we experience the emotional sensation of stress from our first instances of social rejection ridicule. We quickly learn to fear and thus automatically avoid potentially stressful situations of all kinds, including.</p>
-                        <p class="mt-30">This response is important for our ability to learn from mistakes, but it alsogives self-criticism, because it is part of the threat-protection system. In other words.</p>
-                    </div>
-
                     <div class="col-md-12">
                         <div class="divider"></div>
                         <!-- /divider -->
@@ -40,10 +49,10 @@
                     <div class="col-md-12">
                         <div class="blog-details-nav d-flex justify-content-between">
                             <div>
-                                <a class="blog-link" href="blog-details.html">Why swiming is also another important thing for man. <small>PREVIOUS POST</small></a>
+                                <a class="blog-link" href="blog-details-18.html"> <small>PREVIOUS POST</small></a>
                             </div>
                             <div class="text-right">
-                                <a class="blog-link" href="blog-details.html">Difference between web design and web development. <small>NEXT POST</small></a>
+                                <a class="blog-link" href="blog-details.html"><small>NEXT POST</small></a>
                             </div>
                         </div>
                         <!-- /portfolio-details-nav -->
