Lời nhắn mô tả cập nhật

--- a/about.html
+++ b/about.html
@@ -111,34 +111,15 @@
                             </div>
 
                             <div class="col-md-12">
-                                <h2 class="section-heading" style="color:#6e80e3"><span>2/</span>What I do?</h2>
+                                <h2 class="section-heading" style="color:#6e80e3"><span>2/</span>process</h2>
                                 <!-- /section-heading -->
                             </div>
-                            <div class="col-md-4">
-                                <div class="service-item">
-                                    <i class="lni-layout"></i>
-                                    <h4>UX Design</h4>
-                                    <p>I analyze user needs and behaviors to design seamless, intuitive experiences.</p>
+                            <div class="col-md-12">
+                                <div class="Design process">
+                                    <img class="img-fluid mt-40" src="img/testimonials/process-scaled.png" alt="">
                                 </div>
                                 <!-- /service-item -->
                             </div>
-                            <div class="col-md-4">
-                                <div class="service-item">
-                                    <i class="lni-website"></i>
-                                    <h4>UI Design</h4>
-                                    <p>I create visually appealing and intuitive interfaces that enhance user experience.</p>
-                                </div>
-                                <!-- /service-item -->
-                            </div>
-                            <div class="col-md-4">
-                                <div class="service-item">
-                                    <i class="lni-color-pallet"></i>
-                                    <h4>Prototype & Testing</h4>
-                                    <p>I validate designs with prototypes and user testing to ensure optimal performance.</p>
-                                </div>
-                                <!-- /service-item -->
-                            </div>
-
                             <div class="col-md-12">
                                 <div class="divider"></div>
                                 <!-- /divider -->
