--- a/portfolio-details-06.html
+++ b/portfolio-details-06.html
@@ -8,7 +8,7 @@
                             <div class="tag mt-0">
                                 <span>Nov/2024 - App - Freelance</span>
                             </div>
-                            <h4 class="blog-details-title">ny Share – Smart EV Charging App.</h4>
+                            <h4 class="blog-details-title">Any Share – Smart EV Charging App.</h4>
                         </div>
                     </div>
                     <div class="col-lg-12">
