--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
         </ul>
     </nav>
     <!-- /nav-menu -->
-
     <div class="section-standard">
         <div class="container">
             <div class="row align-items-center">
@@ -94,14 +93,14 @@
                         <div class="g-title">
                             <h4><span>Tuan</span> Dang</h4>
                             <p class="mb-25">I enjoy creating delightful, human-centered digital experiences.<br>Think. Make. Solve</p>
-                            <a href="resume.html" class="g-link slide-vertical" data-splitting>Get Resume</a>
+                                <a href="resume.html" class="g-link slide-vertical words chars splitting" data-splitting="" style="--word-total: 2; --char-total: 9;"><span class="word" data-word="Get" style="--word-index: 0;"><span class="char" data-char="G" style="--char-index: 0;">G</span><span class="char" data-char="e" style="--char-index: 1;">e</span><span class="char" data-char="t" style="--char-index: 2;">t</span></span><span class="whitespace"> </span><span class="word" data-word="Resume" style="--word-index: 1;"><span class="char" data-char="R" style="--char-index: 3;">R</span><span class="char" data-char="e" style="--char-index: 4;">e</span><span class="char" data-char="s" style="--char-index: 5;">s</span><span class="char" data-char="u" style="--char-index: 6;">u</span><span class="char" data-char="m" style="--char-index: 7;">m</span><span class="char" data-char="e" style="--char-index: 8;">e</span></span></a>
                         </div>
                         <!-- g-title -->
                     </div>
                     <div class="social-links d-block d-lg-none mt-30">
-                        <a href="#" class="slide-horizontal" data-splitting>Facebook</a>
-                        <a href="#" class="slide-horizontal" data-splitting>Twitter</a>
-                        <a href="#" class="slide-horizontal" data-splitting>Dribbble</a>
+                        <a href="#" class="slide-horizontal words chars splitting" data-splitting="" style="--word-total: 1; --char-total: 8;"><span class="word" data-word="Facebook" style="--word-index: 0;"><span class="char" data-char="F" style="--char-index: 0;">F</span><span class="char" data-char="a" style="--char-index: 1;">a</span><span class="char" data-char="c" style="--char-index: 2;">c</span><span class="char" data-char="e" style="--char-index: 3;">e</span><span class="char" data-char="b" style="--char-index: 4;">b</span><span class="char" data-char="o" style="--char-index: 5;">o</span><span class="char" data-char="o" style="--char-index: 6;">o</span><span class="char" data-char="k" style="--char-index: 7;">k</span></span></a>
+                        <a href="#" class="slide-horizontal words chars splitting" data-splitting="" style="--word-total: 1; --char-total: 7;"><span class="word" data-word="Twitter" style="--word-index: 0;"><span class="char" data-char="T" style="--char-index: 0;">T</span><span class="char" data-char="w" style="--char-index: 1;">w</span><span class="char" data-char="i" style="--char-index: 2;">i</span><span class="char" data-char="t" style="--char-index: 3;">t</span><span class="char" data-char="t" style="--char-index: 4;">t</span><span class="char" data-char="e" style="--char-index: 5;">e</span><span class="char" data-char="r" style="--char-index: 6;">r</span></span></a>
+                        <a href="#" class="slide-horizontal words chars splitting" data-splitting="" style="--word-total: 1; --char-total: 8;"><span class="word" data-word="Dribbble" style="--word-index: 0;"><span class="char" data-char="D" style="--char-index: 0;">D</span><span class="char" data-char="r" style="--char-index: 1;">r</span><span class="char" data-char="i" style="--char-index: 2;">i</span><span class="char" data-char="b" style="--char-index: 3;">b</span><span class="char" data-char="b" style="--char-index: 4;">b</span><span class="char" data-char="b" style="--char-index: 5;">b</span><span class="char" data-char="l" style="--char-index: 6;">l</span><span class="char" data-char="e" style="--char-index: 7;">e</span></span></a>
                     </div>
                     <!-- /social-links -->
                 </div>
@@ -109,14 +108,14 @@
                     <div class="standard-text-holder">
                         <h5 class="mb-25">Let's work together</h5>
                         <p class="mb-10">I’m available at</p>
-                        <p class="mb-1"><a href="mailto:tuandv2409@gmail.com" class="slide-vertical colored" data-splitting>tuandv2409@gmail.com</a></p>
-                        <p><a href="tel:(+84) 565 25 9666" class="slide-vertical" data-splitting>(+84) 565 25 9666</a></p>
+                        <p class="mb-1"><a href="mailto:tuandv2409@gmail.com" class="slide-vertical colored words chars splitting" data-splitting="" style="--word-total: 1; --char-total: 20;"><span class="word" data-word="tuandv2409@gmail.com" style="--word-index: 0;"><span class="char" data-char="t" style="--char-index: 0;">t</span><span class="char" data-char="u" style="--char-index: 1;">u</span><span class="char" data-char="a" style="--char-index: 2;">a</span><span class="char" data-char="n" style="--char-index: 3;">n</span><span class="char" data-char="d" style="--char-index: 4;">d</span><span class="char" data-char="v" style="--char-index: 5;">v</span><span class="char" data-char="2" style="--char-index: 6;">2</span><span class="char" data-char="4" style="--char-index: 7;">4</span><span class="char" data-char="0" style="--char-index: 8;">0</span><span class="char" data-char="9" style="--char-index: 9;">9</span><span class="char" data-char="@" style="--char-index: 10;">@</span><span class="char" data-char="g" style="--char-index: 11;">g</span><span class="char" data-char="m" style="--char-index: 12;">m</span><span class="char" data-char="a" style="--char-index: 13;">a</span><span class="char" data-char="i" style="--char-index: 14;">i</span><span class="char" data-char="l" style="--char-index: 15;">l</span><span class="char" data-char="." style="--char-index: 16;">.</span><span class="char" data-char="c" style="--char-index: 17;">c</span><span class="char" data-char="o" style="--char-index: 18;">o</span><span class="char" data-char="m" style="--char-index: 19;">m</span></span></a></p>
+                        <p><a href="tel:(+84) 565 25 9666" class="slide-vertical words chars splitting" data-splitting="" style="--word-total: 4; --char-total: 14;"><span class="word" data-word="(+84)" style="--word-index: 0;"><span class="char" data-char="(" style="--char-index: 0;">(</span><span class="char" data-char="+" style="--char-index: 1;">+</span><span class="char" data-char="8" style="--char-index: 2;">8</span><span class="char" data-char="4" style="--char-index: 3;">4</span><span class="char" data-char=")" style="--char-index: 4;">)</span></span><span class="whitespace"> </span><span class="word" data-word="565" style="--word-index: 1;"><span class="char" data-char="5" style="--char-index: 5;">5</span><span class="char" data-char="6" style="--char-index: 6;">6</span><span class="char" data-char="5" style="--char-index: 7;">5</span></span><span class="whitespace"> </span><span class="word" data-word="25" style="--word-index: 2;"><span class="char" data-char="2" style="--char-index: 8;">2</span><span class="char" data-char="5" style="--char-index: 9;">5</span></span><span class="whitespace"> </span><span class="word" data-word="9666" style="--word-index: 3;"><span class="char" data-char="9" style="--char-index: 10;">9</span><span class="char" data-char="6" style="--char-index: 11;">6</span><span class="char" data-char="6" style="--char-index: 12;">6</span><span class="char" data-char="6" style="--char-index: 13;">6</span></span></a></p>
                     </div>
                     <!-- /standard-text-holder -->
                     <div class="social-links mt-20">
-                        <a href="#" class="slide-horizontal" data-splitting>Facebook</a>
-                        <a href="#" class="slide-horizontal" data-splitting>behance</a>
-                        <a href="#" class="slide-horizontal" data-splitting>Dribbble</a>
+                        <a href="#" class="slide-horizontal words chars splitting" data-splitting="" style="--word-total: 1; --char-total: 8;"><span class="word" data-word="Facebook" style="--word-index: 0;"><span class="char" data-char="F" style="--char-index: 0;">F</span><span class="char" data-char="a" style="--char-index: 1;">a</span><span class="char" data-char="c" style="--char-index: 2;">c</span><span class="char" data-char="e" style="--char-index: 3;">e</span><span class="char" data-char="b" style="--char-index: 4;">b</span><span class="char" data-char="o" style="--char-index: 5;">o</span><span class="char" data-char="o" style="--char-index: 6;">o</span><span class="char" data-char="k" style="--char-index: 7;">k</span></span></a>
+                        <a href="#" class="slide-horizontal words chars splitting" data-splitting="" style="--word-total: 1; --char-total: 7;"><span class="word" data-word="behance" style="--word-index: 0;"><span class="char" data-char="b" style="--char-index: 0;">b</span><span class="char" data-char="e" style="--char-index: 1;">e</span><span class="char" data-char="h" style="--char-index: 2;">h</span><span class="char" data-char="a" style="--char-index: 3;">a</span><span class="char" data-char="n" style="--char-index: 4;">n</span><span class="char" data-char="c" style="--char-index: 5;">c</span><span class="char" data-char="e" style="--char-index: 6;">e</span></span></a>
+                        <a href="#" class="slide-horizontal words chars splitting" data-splitting="" style="--word-total: 1; --char-total: 8;"><span class="word" data-word="Dribbble" style="--word-index: 0;"><span class="char" data-char="D" style="--char-index: 0;">D</span><span class="char" data-char="r" style="--char-index: 1;">r</span><span class="char" data-char="i" style="--char-index: 2;">i</span><span class="char" data-char="b" style="--char-index: 3;">b</span><span class="char" data-char="b" style="--char-index: 4;">b</span><span class="char" data-char="b" style="--char-index: 5;">b</span><span class="char" data-char="l" style="--char-index: 6;">l</span><span class="char" data-char="e" style="--char-index: 7;">e</span></span></a>
                     </div>
                     <!-- /social-links -->
                 </div>
@@ -124,8 +123,6 @@
         </div>
     </div>
     <!-- /section-standard -->
-
-
     <!-- All JS -->
     <script src="js/jquery-v1.12.4.min.js"></script>
     <script src="js/plugins.js"></script>
