Lời nhắn commit (ví dụ: thêm file mới)

--- a/about.html
+++ b/about.html
@@ -260,7 +260,7 @@
                             <div class="col-md-12">
                                 <footer>
                                     <div class="footer-top text-center">
-                                        <h2>tuandv.8889@gmail.com</h2>
+                                        <h2>tuandv2409@gmail.com</h2>
                                         <p>Anland Premium Apartment, To Huu Street, La Khe Ward</p>
                                         <p>Ha Dong District, Hanoi City!</p>
                                     </div>
